# TextureNet

./: README.md
3rd/: Readme.md
data/: Readme.md  compile.sh  download.py  fastio.cpp  gen_chunks.py  gen_colors.py  gen_labels.py  gen_obj.py  gen_objs.py  gen_sens.py  gen_split.py  gen_textiles.py  labelweights.txt  maplabel.cpp  neighbor.cpp  prechunk.py  preprocess.sh  ptex.cpp  root.py  scannet_dataset.py
data/Neighbors/: CMakeLists.txt  neighbor.cpp
data/QuadriFlow/: CMakeLists.txt
data/QuadriFlow/src/: field-math.hpp  hierarchy.cpp  hierarchy.hpp  localsat.cpp  main.cpp  parametrizer-mesh.cpp  parametrizer-sing.cpp  parametrizer.hpp
evaluate/: ReadMe.md  compile.sh  evaluate.sh  evaluate_confusion.py  extract_labels.cpp  gen_confusion.py  run_parallel.py
src/: ReadMe.md  evaluate.sh  execute.py  main.py  train.sh
src/dataset/: dataset.py
src/models/: texturenet.py  texturenet_param.py  texturenet_util.py
src/tf_ops/grouping/: tf_grouping.cpp  tf_grouping.py  tf_grouping_compile.sh  tf_grouping_g.cu
src/tf_ops/grouping/test/: query_ball_point.cpp  query_ball_point.cu  query_ball_point_block.cu  query_ball_point_grid.cu
src/tf_ops/interpolation/: interpolate.cpp  tf_interpolate.cpp  tf_interpolate.py  tf_interpolate_compile.sh  tf_interpolate_g.cu
src/tf_ops/sampling/: tf_sampling.py  tf_sampling_compile.sh  tf_sampling_g.cu
